# q-pup_robot

./: .clang-tidy  .gitignore  .tmuxinator.yml  LICENSE  README.md  q_pup_robot.rosinstall
odrive_state_controller/: CMakeLists.txt  odrive_state_controller_plugin.xml  odrive_state_plugin.xml  package.xml
odrive_state_controller/include/odrive_state_controller/: odrive_state_controller.hpp
odrive_state_controller/src/: odrive_state_controller.cpp
odrive_state_msgs/: CMakeLists.txt  package.xml
odrive_state_msgs/msg/: OdriveState.msg
odrive_state_msgs/srv/: SetAxisState.srv  SetControlMode.srv  SetInputMode.srv
q-pup_config/: CMakeLists.txt  README.md  config.json  package.xml
q-pup_config/config/gait/: gait.yaml
q-pup_config/include/: gait_config.h  quadruped_description.h
q-pup_config/launch/: bringup.launch  gazebo.launch  navigate.launch  slam.launch  spawn_robot.launch
q-pup_config/launch/include/: move_base.launch
q-pup_config/urdf/: quadruped.urdf
q_pup_config/: CMakeLists.txt  README.md  config.json  package.xml
q_pup_config/config/ros_control/: ros_control.yaml
q_pup_config/include/: hardware_config.h  quadruped_description.h
q_pup_config/launch/: bringup.launch  gazebo.launch  navigate.launch  slam.launch  spawn_robot.launch
q_pup_config/launch/include/: gmapping.launch  move_base.launch
q_pup_config/urdf/: quadruped.urdf
q_pup_robot/: CMakeLists.txt  package.xml
q_pup_vision/: CMakeLists.txt  package.xml
q_pup_vision/launch/: zed_ar_track.launch
qpup_bringup/: CMakeLists.txt  package.xml
qpup_bringup/launch/: demo.launch  gui.launch  local_demo.launch  qpup.launch  rqt_gait.launch  teleop.launch
qpup_bringup/rqt/: 1.perspective  2.perspective  gait.perspective
qpup_bringup/scripts/: bringup_fake_can.sh  bringup_jetson_can.sh  clock_server.py
qpup_config/: CMakeLists.txt  README.md  config.json  package.xml  setup.bash
qpup_config/config/gait/: gait.yaml
qpup_config/config/joints/: joints.yaml
qpup_config/config/links/: links.yaml
qpup_config/config/ros_control/: ros_control.yaml
qpup_config/include/: gait_config.h  quadruped_description.h
qpup_config/launch/: bringup.launch  gazebo.launch  navigate.launch  slam.launch  spawn_robot.launch  tf.launch
qpup_config/launch/include/: move_base.launch
qpup_config/urdf/: quadruped.urdf
qpup_control/: CMakeLists.txt  package.xml
qpup_control/config/: control_loop.yaml  qpup_controllers.yaml  qpup_hardware.yaml
qpup_control/include/qpup_control/: qpup_control_loop.hpp  qpup_control_loop_real.hpp
qpup_control/launch/: qpup_control.launch
qpup_control/src/: qpup_control_loop.cpp  qpup_control_loop_real.cpp  qpup_control_node.cpp
qpup_hw/: CMakeLists.txt  package.xml  qpup_hw_plugin.xml
qpup_hw/config/: qpup_hardware.yaml
qpup_hw/include/qpup_hw/: odrive_state_interface.hpp  qpup_hw.hpp  qpup_hw_real.hpp
qpup_hw/include/qpup_hw/navx/: AHRS.h  AHRSProtocol.h  ContinuousAngleTracker.h  IBoardCapabilities.h  IIOCompleteNotification.h  IIOProvider.h  IMUProtocol.h  IMURegisters.h  ITimestampedDataSubscriber.h  InertialDataIntegrator.h  OffsetTracker.h  SerialIO.h  SerialPort.h
qpup_hw/src/: qpup_hw.cpp  qpup_hw_real.cpp
qpup_hw/src/navx/: AHRS.cpp  ContinuousAngleTracker.cpp  InertialDataIntegrator.cpp  OffsetTracker.cpp  README.md  SerialIO.cpp  TimeStamp.cpp
qpup_robot/: CMakeLists.txt  package.xml
qpup_utils/: CMakeLists.txt  package.xml
qpup_utils/config/: qpup_can_generated.dbc  qpup_can_generated_dump.txt
qpup_utils/include/qpup_generated/: qpup_can_generated.h
qpup_utils/include/qpup_utils/: qpup_can.hpp  qpup_params.hpp  qpup_utils.hpp
qpup_utils/scripts/: bringup_can.sh  generate_dbc.py
qpup_utils/src/: qpup_can.cpp  qpup_can_generated.c  qpup_params.cpp  qpup_utils.cpp  test_node.cpp
qpup_utils/test/: odrive_can.cpp  odrive_can.test
qpup_vision/: CMakeLists.txt  package.xml
qpup_vision/launch/: qpup_vision.launch  zed_ar_track.launch
qpup_vision/rviz/: zed_ar_track.rviz
qpup_vision/src/: person_tracker.cpp
