<?xml version="1.0"?>
<?xml-model
        href="http://download.ros.org/schema/package_format3.xsd"
        schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>odrive_state_controller</name>
    <version>0.1.0</version>
    <description>Ros controller to publish data from odrives</description>

    <maintainer email="melvin.mc.wang@gmail.com">Melvin Wang</maintainer>
    <maintainer email="mtreynolds@uwaterloo.ca">Matt Reynolds</maintainer>
    <maintainer email="wrraftus@uwaterloo.ca">Walter Raftus</maintainer>
    <maintainer email="djhemphill@uwaterloo.ca">Dawson Hemphill</maintainer>

    <license>MIT</license>

    <author email="melvin.mc.wang@gmail.com">Melvin Wang</author>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>controller_interface</depend>
    <depend>realtime_tools</depend>
    <depend>roscpp</depend>
    <depend>odrive_state_msgs</depend>
    <depend>pluginlib</depend>
    <depend>qpup_hw</depend>

    <export>
        <controller_interface plugin="${prefix}/odrive_state_controller_plugin.xml"/>
    </export>

</package>
