<?xml version="1.0"?>
<?xml-model
        href="http://download.ros.org/schema/package_format3.xsd"
        schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>odrive_state_msgs</name>
    <version>0.1.0</version>
    <description>State Messages for odrive_state_interface and controller</description>

    <maintainer email="melvin.mc.wang@gmail.com">Melvin Wang</maintainer>
    <maintainer email="mtreynolds@uwaterloo.ca">Matt Reynolds</maintainer>
    <maintainer email="wrraftus@uwaterloo.ca">Walter Raftus</maintainer>
    <maintainer email="djhemphill@uwaterloo.ca">Dawson Hemphill</maintainer>

    <license>MIT</license>

    <author email="melvin.mc.wang@gmail.com">Melvin Wang</author>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>std_msgs</depend>

    <build_depend>message_generation</build_depend>

    <exec_depend>message_runtime</exec_depend>
</package>
