<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>q_pup_robot</name>
  <version>0.0.0</version>
  <description>Q-PUP</description>

  <maintainer email="mtreynolds@uwaterloo.ca">Matt Reynolds</maintainer>
  <maintainer email="melvin.wang@uwaterloo.ca">Melvin Wang</maintainer>
  <maintainer email="wrraftus@uwaterloo.ca">Walter Raftus</maintainer>
  <maintainer email="djhemphill@uwaterloo.ca">Dawson Hemphill</maintainer>

  <license>MIT</license>

  <url type="website">https://q-pup.github.io</url>
  <url type="bugtracker">https://github.com/q-pup/q_pup_robot/issues</url>
  <url type="repository">https://github.com/q-pup/q_pup_robot</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>champ</exec_depend>
  <exec_depend>champ_teleop</exec_depend>
  <exec_depend>champ_setup_assistant</exec_depend>
  <exec_depend>q_pup_vision</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
