<?xml version="1.0"?>
<?xml-model
    href="http://download.ros.org/schema/package_format3.xsd"
    schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qpup_control</name>
  <version>0.0.0</version>
  <description>Package containing qpup's top-level control loops, launch files and the combined hw node
  </description>

  <maintainer email="melvin.mc.wang@gmail.com">Melvin wang</maintainer>
  <maintainer email="mtreynolds@uwaterloo.ca">Matt Reynolds</maintainer>
  <maintainer email="wrraftus@uwaterloo.ca">Walter Raftus</maintainer>
  <maintainer email="djhemphill@uwaterloo.ca">Dawson Hemphill</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

  <depend>combined_robot_hw</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>qpup_hw</depend>
  <depend>qpup_utils</depend>

  <exec_depend>imu_sensor_controller</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>qpup_config</exec_depend>

</package>
