<?xml version="1.0"?>
<?xml-model
        href="http://download.ros.org/schema/package_format3.xsd"
        schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>qpup_hw</name>
    <version>0.1.0</version>
    <description>Package containing all ros-control hw interfaces for qpup</description>

    <maintainer email="melvin.mc.wang@gmail.com">Melvin wang</maintainer>
    <maintainer email="mtreynolds@uwaterloo.ca">Matt Reynolds</maintainer>
    <maintainer email="wrraftus@uwaterloo.ca">Walter Raftus</maintainer>
    <maintainer email="djhemphill@uwaterloo.ca">Dawson Hemphill</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>


    <depend>hardware_interface</depend>
    <depend>joint_limits_interface</depend>
    <depend>roscpp</depend>
    <depend>tf2</depend>
    <depend>transmission_interface</depend>
    <depend>qpup_utils</depend>

    <export>
        <hardware_interface plugin="${prefix}/qpup_hw_plugin.xml"/>
    </export>

</package>
