<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qpup_vision</name>
  <version>0.1.0</version>
  <description>Operator tracking with the ZED camera for Q-PUP</description>

  <maintainer email="mtreynolds@uwaterloo.ca">Matt Reynolds</maintainer>
  <maintainer email="melvin.mc.wang@gmail.com">Melvin Wang</maintainer>
  <maintainer email="wrraftus@uwaterloo.ca">Walter Raftus</maintainer>
  <maintainer email="djhemphill@uwaterloo.ca">Dawson Hemphill</maintainer>

  <license>MIT</license>

  <url type="website">https://q-pup.github.io</url>
  <url type="bugtracker">https://github.com/q-pup/qpup_robot/issues</url>
  <url type="repository">https://github.com/q-pup/qpup_robot</url>

  <buildtool_depend>catkin</buildtool_depend>


  <depend>actionlib</depend>
  <depend>ar_track_alvar</depend>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <exec_depend>depthimage_to_laserscan</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>zed_wrapper</exec_depend>
</package>
